@@ -721,6 +721,7 @@
 #define IDC_BUTTON_DEFAULT2             1590
 #define IDC_CHECK_MUTELEFT              1591
 #define IDC_CHECK_MUTERIGHT             1592
+#define IDC_CHECK_REPEAT                1593
 #define ID_HELP_WHATISMYIP              32791
 #define ID_USERS_OP                     32798
 #define ID_CHANNELS_VIEWCHANNELMESSAGES 32801
@@ -837,7 +838,7 @@
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        323
 #define _APS_NEXT_COMMAND_VALUE         32955
-#define _APS_NEXT_CONTROL_VALUE         1593
+#define _APS_NEXT_CONTROL_VALUE         1594
 #define _APS_NEXT_SYMED_VALUE           326
 #endif
 #endif
